hard-gists/035dc3b722b7f89cce66520dde285c9a/run.log
=== Docker Run Log for 035dc3b722b7f89cce66520dde285c9a ===
Started at: Mi 29. Okt 11:22:47 CET 2025

[2025-10-29 11:22:48] START: Running container for 035dc3b722b7f89cce66520dde285c9a
[2025-10-29 11:22:48] SUCCESS: Container 360f822fa1e210aa8753ffb022d3be15a5a8344b18228d751e17ce1df9d63de7 started for 035dc3b722b7f89cce66520dde285c9a
=== Container logs for 035dc3b722b7f89cce66520dde285c9a ===
  File "/snippet.py", line 33
    print node['ip'], node['port'], node['device']
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 035dc3b722b7f89cce66520dde285c9a ===
[2025-10-29 11:22:50] INFO: Container 360f822fa1e210aa8753ffb022d3be15a5a8344b18228d751e17ce1df9d63de7 has stopped
